* Fix align issue in checkout when using a logotype by low height

--- a/public_html/includes/templates/default.catalog/less/checkout.less
+++ b/public_html/includes/templates/default.catalog/less/checkout.less
@@ -19,6 +19,7 @@
 #header {
   margin: 0 auto;
   padding: @default-gutter-size;
+  overflow: hidden;
   .customer-service {
     float: right;
     text-align: right;
